--- a/pattern/detect-browser/test.html
+++ b/pattern/detect-browser/test.html
@@ -5,27 +5,26 @@
   <meta http-equiv="content-type" content="text/html" />
   <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
   <title>detect browser</title>
-  <link href="browser_detect.css" rel="stylesheet">
-  <style>.display { display: none; }</style>
+  <link href="detect-browser.css" rel="stylesheet">
 </head>
 <body>
-  <div class="display ie">
+  <div class="result ie">
     <div>IE</div>
     <div class="display"></div>
   </div>
-  <div class="display edge">
+  <div class="result edge">
     <div>EDGE</div>
     <div class="display"></div>
   </div>
-  <div class="display firefox">
+  <div class="result firefox">
     <div>FIREFOX</div>
     <div class="display"></div>
   </div>
-  <div class="display safari">
+  <div class="result safari">
     <div>SAFARI</div>
     <div class="display"></div>
   </div>
-  <div class="display chrome">
+  <div class="result chrome">
     <div>CHROME</div>
     <div class="display"></div>
   </div>
