Add utility/debug and improve layout/flex

--- a/src/utility/debug/debug-layer.test.html
+++ b/src/utility/debug/debug-layer.test.html
@@ -9,14 +9,14 @@
 </head>
 
 <body class="debug">
-  <div id="ddebug_layer" class="debug-layer">
+  <div id="debug_layer" class="debug-layer">
     <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
   </div>
-  <div class="ddebug-component">
+  <div class="debug-component">
     <div class="item">This is <abbr title="abbreviation text">abbr</i> text.</div>
     <div class="item">Declaration: <code>var <b>variable</b></code> inline text.</div>
     <div class="item">
@@ -27,9 +27,6 @@
   <div id="debug_box">
   
   </div>
-  <script>
-  
-  </script>
 </body>
 
 </html>
