Add typography/block and more

--- a/src/tool/compare/demo.html
+++ b/src/tool/compare/demo.html
@@ -13,8 +13,9 @@
   <main class="compare">
     <header class="compare-header">HEADER</header>
     <nav class="compare-tab">
-      <label class="tab_item" for="switch_1">View 1</label>
-      <label class="tab_item" for="switch_2">View 2</label>
+      <label class="tab-item" for="switch_1">View 1</label>
+      <label class="tab-item _button">Button</label>
+      <label class="tab-item" for="switch_2">View 2</label>
     </nav>
     <div class="compare-view">
         <section class="view-split">
