--- a/src/tool/simulator/xx-large.html
+++ b/src/tool/simulator/xx-large.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
   <title>xx-large</title>
   <link href="./device.css" rel="stylesheet">
 <style>
@@ -24,26 +24,26 @@
 /* medium */
 @media screen and (min-width: 426px) and (max-width: 768px) {
   .xx-large { scale: .35; }
-  .absolute-center { margin-top: 100px; }
-  .spec { top: -90px }
+  .absolute-center { margin-top: 140px; }
+  .spec { top: -130px }
   }
 /* large */
 @media screen and (min-width: 769px) and (max-width: 1024px) {
   .xx-large { scale: .5; }
-  .absolute-center { margin-top: 150px; }
-  .spec { top: -140px }
+  .absolute-center { margin-top: 220px; }
+  .spec { top: -210px }
   }
 /* x-large */
 @media screen and (min-width: 1025px) and (max-width: 1440px) {
   .xx-large { scale: .7; }
-  .absolute-center { margin-top: 350px; }
-  .spec { top: -320px }
+  .absolute-center { margin-top: 380px; }
+  .spec { top: -370px }
   }
 /* xx-large */
 @media screen and (min-width: 1441px) {
   .xx-large { scale: .7; }
   .absolute-center { margin-top: 0; }
-  .spec { top: 50px; }
+  .spec { top: 20px; }
   }
 </style>
 </head>
