--- a/index.html
+++ b/index.html
@@ -3,10 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Initial-CSS</title>
+  <link href="dist/initial.css" rel="stylesheet">
+<style>
+:root {
+  /* == theme-light*/
+  --theme_color-bg_primary: DarkOrange;
+  --theme_color-fg_primary: Black;
+  /* extend */
+  --color_border_layout: black;
+  /* call */
+  --header-bg: var(--theme_color-bg_primary, silver);
+  nav { border: 1px solid var(--color_border_layout); }
+  nav a, nav a:active { color: Black; }
+  footer a { color: silver; }
+  --color-selection: Highlight;
+}
+</style>
 </head>
-<body style="margin:5%">
-<pre style="font:32px/48px monospace">
-<a href="demo/index.html">demo</a>
-</pre>
+<body>
+  <header>
+    <h1>Initial-CSS</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="dist/demo/index.html">Demo</a></li>
+      </li>
+    </nav>
+  </header>
+  <main>
+    <article>
+      <section>
+        <h2>Feature</h2>
+        <ul>
+          <li>Use native browser style</li>
+          <li>TODO</li>
+        </ul>
+      </section>
+    </article>
+  </main>
+  <footer>
+    <p><a href="javascript:void(0)">github</a></p>
+  </footer>
 </body>
 </html>
